created Bootstrap - Example17

--- a/example17.html
+++ b/example17.html
@@ -18,8 +18,8 @@
         <div class="container-fluid">
             <a href="#" class="navbar-brand">
 
-                <img src="images/logo.png" alt="" width="30" height="24">
-                LogoText
+                <img src="images/volvo.jpg" alt="" width="30" height="24">
+                Volvo Cars 
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
