created Bootstrap40 - Main page

--- a/example40.html
+++ b/example40.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <div class="container-fluid p-4 bg-primary text-white text-center">
+    <div class="container-fluid p-4 bg-secondary text-white text-center">
         <h1>Main Page</h1>
         <p>Resize this responsive page to see the effect!</p>
     </div>
